# gilded_rose_python

./: pyproject.toml
gilded_rose/: gilded_rose.py
gilded_rose/domain/: aged_brie.py  backstage.py  conjured.py  item.py  quality.py  sell_in.py  sulfuras.py
tests/: test_gilded_rose.py  test_sell_in.py
