[project]
name = "gilded-rose"
version = "0.1.0"
description = ""
authors = [
    {name = "vmrodriguezm",email = "vrodriguez@stratio.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)",
    "approvaltests (>=14.3.0,<15.0.0)",
    "pytest-approvaltests (>=0.2.4,<0.3.0)",
    "coverage (>=7.6.12,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
